--- a/app/webroot/css/main.css
+++ b/app/webroot/css/main.css
@@ -1,95 +1,71 @@
-* {margin: 0; padding: 0;}
-body {background-color: #E1E6FA; font-family: helvetica,arial,freesans,clean,sans-serif; font-size: 13px; line-height: 19px;}
+* { padding: 0; margin: 0 }
+body { font-family: 'PT Sans', arial, serif; background-color: #EFEBE3; font-size: 16px; }
+a, a:visited { text-decoration: none; color: #2981e4; }
+a:hover { color: #2575cf;}
+.container { width: 960px; margin: 0 auto; }
 
-form div.submit input {border-radius: 5px; -moz-border-radius: 5px; -webkit-border-radius: 5px;background-color: #DFEFFC; border: 1px solid #C5DBEC; color: #2E6E9E; padding: 5px 20px;}
+#header { background-color: #111; }
+#logo { float: left; padding: 10px; }
+#logo h1 { font-family: 'Nobile', arial, serif; font-size: 20px;}
+	#logo h1 a { color: #eee; text-decoration: none; display: block;}
 
-#container { margin: 0 auto; width: 960px;}
-#header h1 { float: left; padding: 10px 0; }
-   #header h1 a {color: black; text-decoration: none;}
-nav {clear: both; display: block; }
-   nav a {padding: 5px 10px 5px 0;}
-nav ul {line-height: 24px; list-style: none; margin-bottom: 20px;}
-   nav li {float: left; padding: 0 10px 0 0; }
-      nav li a {display: block; text-decoration: none; color: #333; }
-      nav li a:hover {text-decoration: underline; }
+#auth { float: right; }
+#auth ul { list-style: none; }
+	#auth li { float: left; padding: 10px 10px 10px 0; }
+		#auth li a { text-decoration: none; }
 
-#account {float: right; padding: 10px 20px; background-color: #282E30; color: #eee; -webkit-border-bottom-right-radius: 18px; -webkit-border-bottom-left-radius: 18px; -moz-border-radius-bottomright: 18px; -moz-border-radius-bottomleft: 18px; border-bottom-right-radius: 18px; border-bottom-left-radius: 18px;}
-   #account ul {line-height: 24px; list-style: none;}
-   #account li {float: left; padding: 0 10px 0 0;}
-      #account li a { display: block; text-decoration: none; color: #eee; font-weight: bold; border-bottom: 2px solid #282E30; }
-      #account li a:hover {border-bottom: 2px solid #eee; }
-   
-#content { clear: both; margin: 20px 0; padding: 20px;  background-color: white; border: 1px solid #C8C5B3; border-radius: 18px; -moz-border-radius: 18px; -webkit-border-radius: 18px;}
+#main { background-color: white; padding: 10px; }
 
-ul.child-category {list-style: none;}
-   .child-category li {margin-left: 20px; }
+#navigation { display: block; margin: 10px 0;}
+#navigation ul { list-style: none; }
+	#navigation li { float: left; padding: 10px;}
+		#navigation li.first {padding: 10px 10px 10px 0; }
 
-#notification { padding: 5px 10px; margin: 10px 40px; border-radius: 8px; -moz-border-radius: 8px; -webkit-border-radius: 8px; background-color: #FBEC88; color: black; border: 1px solid #FAD42E; }
-#notification img {float: left; }
-#authMessage, #flashMessage {float: left; padding: 5px 0 0 5px; }
+#content .content-title { margin-bottom: 10px; }
 
-.product-item {display: block; width: 200px; float: left; text-align: center;}
-   .product-item div.inner {display: block; height: 150px;}
-   .product-item div.outer {display: block; height: 25px; }
-   .product-item img.product-image {display: block; margin: 0 auto;}
-   .product-item a.product-link {display: block; text-align: center;}
-   .product-item span.product-price {padding-right: 5px;}
-   .product-item a.pale-blue {text-decoration: none; margin: 0 auto;}
+#footer { padding: 10px; margin-top: 10px; font-size: 12px; float: right;}
 
-/* pale blue (inspired by okcupid.com)
-*******************************************************************************/
-.pale-blue {
-  background: #e7eef5;
-  border: 1px solid #becfe3;
-  -moz-border-radius: 16px;
-  -webkit-border-radius: 16px;
-  border-radius: 16px;
-  -moz-box-shadow: inset 0 1px 0 0 #fff;
-  -webkit-box-shadow: inset 0 1px 0 0 #fff;
-  box-shadow: inset 0 1px 0 0 #fff;
-  color: #2a65a6;
-  font-family: "lucida grande", sans-serif;
-  font-size: 12px;
-  font-weight: normal;
-  line-height: 1;
-  padding: 5px 10px 6px 10px;
-  text-align: center;
-  width: 150px;
+.button, .button:visited {
+	background: #222 url(overlay.png) repeat-x;
+	display: inline-block;
+	padding: 5px 10px 6px; 
+	color: #fff;
+	text-decoration: none;
+	-moz-border-radius: 6px;
+	-webkit-border-radius: 6px;
+	-moz-box-shadow: 0 1px 3px rgba(0,0,0,0.6);
+	-webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.6);
+	text-shadow: 0 -1px 1px rgba(0,0,0,0.25);
+	border-bottom: 1px solid rgba(0,0,0,0.25);
+	position: relative;
+	cursor: pointer
 }
 
-.pale-blue:hover {
-  color: #6f8cc0;
-  text-decoration: none;
-}
+.button:hover							{ background-color: #111; color: #fff; }
+.button:active							{ top: 1px; }
+.small.button, .small.button:visited 			{ font-size: 11px}
+.button, .button:visited,
+.medium.button, .medium.button:visited 		{ font-size: 13px;
+										  font-weight: bold;
+										  line-height: 1;
+										  text-shadow: 0 -1px 1px rgba(0,0,0,0.25);
+										  }
 
-.pale-blue:active {
-  border: 1px solid #8c98a7;
-  color: #6f8cc0;
-}
+.large.button, .large.button:visited 			{ font-size: 14px;
+											  padding: 8px 14px 9px; }
 
-.clear {clear: both;}
+.super.button, .super.button:visited 			{ font-size: 34px;
+											  padding: 8px 14px 9px; }
 
-table.cake-sql-log { width: 960px; margin: 30px auto;}
-
-table.cake-sql-log th {
-	font: bold 11px "Trebuchet MS", Verdana, Arial, Helvetica,
-	sans-serif;
-	color: #6D929B;
-	border-right: 1px solid #C1DAD7;
-	border-bottom: 1px solid #C1DAD7;
-	border-top: 1px solid #C1DAD7;
-	letter-spacing: 2px;
-	text-transform: uppercase;
-	text-align: left;
-	padding: 6px 6px 6px 12px;
-	background: #CAE8EA no-repeat;
-}
-
-
-table.cake-sql-log td {
-	border-right: 1px solid #C1DAD7;
-	border-bottom: 1px solid #C1DAD7;
-	background: #fff;
-	padding: 6px 6px 6px 12px;
-	color: #6D929B;
-}
+.pink.button, .magenta.button:visited		{ background-color: #e22092; }
+.pink.button:hover							{ background-color: #c81e82; }
+.green.button, .green.button:visited		{ background-color: #91bd09; }
+.green.button:hover						    { background-color: #749a02; }
+.red.button, .red.button:visited			{ background-color: #e62727; }
+.red.button:hover							{ background-color: #cf2525; }
+.orange.button, .orange.button:visited		{ background-color: #ff5c00; }
+.orange.button:hover						{ background-color: #d45500; }
+.blue.button, .blue.button:visited		    { background-color: #2981e4; }
+.blue.button:hover							{ background-color: #2575cf; }
+.yellow.button, .yellow.button:visited		{ background-color: #ffb515; }
+.yellow.button:hover						{ background-color: #fc9200; }
