--- a/app/webroot/css/app.css
+++ b/app/webroot/css/app.css
@@ -6,7 +6,7 @@
 	#search {float: right; padding-right: 10px; }
 #app {
 	height: 550px; width: 680px; float: left; overflow: auto; padding: 10px 10px 40px 10px; background-color: white;
-	-moz-box-shadow: 0 1px 2px #888; -webkit-box-shadow: 0 1px 2px #888; box-shadow: 0 1px 2px #888;
+	-moz-box-shadow: 1px 2px 2px #888; -webkit-box-shadow: 1px 2px 2px #888; box-shadow: 1px 1px 2px #888;
 }
 
 #sidebar {height: 550px; border-left: 1px solid #ccc; width: 249px; overflow: none; float: left; padding: 10px 0 40px 10px; }
