Added container item addition.  Updated dashboard for simple statistics.  Added ability to delete container (which also deletes dependent container items).

--- a/app/webroot/css/app.css
+++ b/app/webroot/css/app.css
@@ -5,12 +5,12 @@
 		#navigation ul li.active a { color: #333; }
 	#search {float: right; padding-right: 10px; }
 #app {
-	height: 550px; width: 680px; float: left; overflow: auto; padding: 10px 10px 40px 10px; background-color: white;
+	height: 500px; width: 680px; float: left; overflow: auto; padding: 10px 10px 40px 10px; background-color: white;
 	-moz-box-shadow: 1px 2px 2px #888; -webkit-box-shadow: 1px 2px 2px #888; box-shadow: 1px 1px 2px #888;
 }
 
-#sidebar {height: 550px; border-left: 1px solid #ccc; width: 249px; overflow: none; float: left; padding: 10px 0 40px 10px; }
-	#control { width: 220px; margin: 0 auto; padding-top: 10px; }
+#sidebar {height: 500px; border-left: 1px solid #ccc; width: 249px; overflow: none; float: left; padding: 10px 0 40px 10px; }
+	#control { width: 220px; margin: 0 auto; padding-top: 10px; height: 150px;}
 	#rev { width: 160px; margin: 0 auto; padding-top: 10px; }
 
 #footer { float: left; padding: 10px 0;}
@@ -29,3 +29,6 @@ a.container-box:hover { border: 1px solid #2981e4; background-color: #c0caff; }
 	.paging a:link,
 	.paging a:visited { color:#333; display:block; float:left; padding:3px 4px; text-decoration:none; }
 	.paging a:hover{ border:solid 1px #667151; background:#c0caff; color:#333; }
+
+.container-item-list { padding: 10px 20px; }
+	.alternate { background-color: #ddd; }
