--- a/app/webroot/css/app.css
+++ b/app/webroot/css/app.css
@@ -16,11 +16,15 @@
 	-moz-box-shadow: 1px 2px 2px #888; -webkit-box-shadow: 1px 2px 2px #888; box-shadow: 1px 1px 2px #888; z-index: 2;
 }
 
-#sidebar {height: 480px; border-left: 1px solid #ccc; width: 249px; overflow: none; float: left; padding: 10px 0 40px 10px; }
+#sidebar {height: 480px; border-left: 1px solid #ccc; width: 249px; overflow: none; float: right; padding: 10px 0 40px 10px; }
 	#control { width: 220px; margin: 0 auto; padding-top: 10px; height: 150px;}
 	#rev { width: 160px; margin: 0 auto; padding-top: 10px; }
 
 #footer { float: left; padding: 10px 0;}
+
+#search form select {
+	padding: 2px 5px;
+}
 
 a.container-box { float: left; padding: 10px; width: 137px; height: 160px; text-align: center; border: 1px solid white; color: #333; }
 a.container-box:hover { border: 1px solid #2981e4; background-color: #c0caff; }
@@ -41,3 +45,6 @@ a.container-box:hover { border: 1px solid #2981e4; background-color: #c0caff; }
 	.container-item-list-content { width: 570px; float: left;}
 	.container-item-list-options { margin-left: 10px; float: left; }
 	.alternate { background-color: #ddd; }
+
+table { width: 100%; }
+	table tbody td { padding: 10px; }
