--- a/app/webroot/css/main.css
+++ b/app/webroot/css/main.css
@@ -71,3 +71,19 @@ input.button { border: 0; }
 .blue.button:hover							{ background-color: #2575cf; }
 .yellow.button, .yellow.button:visited		{ background-color: #ffb515; }
 .yellow.button:hover						{ background-color: #fc9200; }
+
+form input, form select, form textarea {
+	background-color: #eaeaea;
+	background: -moz-linear-gradient(top, #ffffff, #eaeaea);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0.0, #ffffff), color-stop(1.0, #eaeaea));
+	border: 1px solid #cacaca;
+	color: #444;
+	padding: 3px 5px;
+}
+form label {
+	display: block;
+}
+form textarea {
+	width: 400px;
+	height: 150px;
+}
