--- a/app/webroot/css/app.css
+++ b/app/webroot/css/app.css
@@ -1,3 +1,5 @@
+.fixed-header { position: fixed; width: 100%; top:0; left: 0; background: #EFEBE3; z-index: 2; }
+.app-begin { position: relative; top: 120px; }
 #navigation {padding-top: 5px; }
 	#navigation ul li { background-color: #2981e4; padding: 5px 10px; margin-right: 3px; }
 	#navigation ul li.active {background-color:#c0caff; }
@@ -12,11 +14,11 @@
 	#submenu-content a { margin-right: 8px; }
 		#submenu-content a img {width: 9px; height: 9px;}
 #app {
-	height: 480px; width: 680px; float: left; overflow: auto; padding: 10px 10px 40px 10px; background-color: white;
+	min-height: 400px; width: 680px; float: left; overflow: auto; padding: 10px 10px 40px 10px; background-color: white;
 	-moz-box-shadow: 1px 2px 2px #888; -webkit-box-shadow: 1px 2px 2px #888; box-shadow: 1px 1px 2px #888; z-index: 2;
 }
 
-#sidebar {height: 480px; border-left: 1px solid #ccc; width: 249px; overflow: none; float: right; padding: 10px 0 40px 10px; }
+#sidebar {min-height: 400px; width: 249px; overflow: none; float: right; padding: 10px 0 40px 10px; }
 	#control { width: 220px; margin: 0 auto; padding-top: 10px; height: 150px;}
 	#rev { width: 160px; margin: 0 auto; padding-top: 10px; }
 
