--- a/app/webroot/css/app.css
+++ b/app/webroot/css/app.css
@@ -58,5 +58,7 @@ a.container-box:hover { border: 1px solid #2981e4; background-color: #c0caff; }
 .container_view_add { float: left; width: 400px; }
 .container_item_index { float: left; width: 350px; }
 
+#fancybox-content h2 { text-align: center; background-color: #EFEBE3; -webkit-border-radius: 8px; -moz-border-radius: 8px; border-radius: 8px; padding: 5px; border: 1px solid #CDC9C1}
+
 table { width: 100%; }
 	table tbody td { padding: 10px; }
