Fixed small display bug introduced by #42.

--- a/app/webroot/css/main.css
+++ b/app/webroot/css/main.css
@@ -4,7 +4,7 @@ a, a:visited { text-decoration: none; color: #2981e4; }
 a:hover { color: #2575cf;}
 a img { border: none; }
 p {margin-bottom: 10px; }
-li {margin-left: 20px; }
+ul.legal li {margin-left: 20px; }
 
 .container { width: 960px; margin: 0 auto; }
 
