--- a/app/webroot/css/app.css
+++ b/app/webroot/css/app.css
@@ -1,3 +1,4 @@
+.beta { position: fixed; }
 .fixed-header { position: fixed; width: 100%; top:0; left: 0; background: #EFEBE3; z-index: 2; }
 .app-begin { position: relative; top: 120px; }
 #navigation {padding-top: 5px; }
@@ -58,7 +59,7 @@ a.container-box:hover { border: 1px solid #2981e4; background-color: #c0caff; }
 .container_view_add { float: left; width: 400px; }
 .container_item_index { float: left; width: 350px; }
 
-#fancybox-content h2 { text-align: center; background-color: #EFEBE3; -webkit-border-radius: 8px; -moz-border-radius: 8px; border-radius: 8px; padding: 5px; border: 1px solid #CDC9C1}
+#fancybox-content h2 { text-align: center;}
 
 table { width: 100%; }
 	table tbody td { padding: 10px; }
