--- a/app/webroot/css/main.css
+++ b/app/webroot/css/main.css
@@ -98,6 +98,7 @@ form textarea {
 	width: 400px;
 	height: 150px;
 }
+form .checkbox { float: left; margin-right: 5px; }
 
 .tipsy { padding: 5px; font-size: 10px; opacity: 0.8; filter: alpha(opacity=80); background-repeat: no-repeat;  background-image: url(../img/tipsy.gif); }
   .tipsy-inner { padding: 5px 8px 4px 8px; background-color: black; color: white; max-width: 200px; text-align: center; }
