--- a/app/webroot/css/main.css
+++ b/app/webroot/css/main.css
@@ -11,14 +11,15 @@ ul.legal li {margin-left: 20px; }
 .container { width: 960px; margin: 0 auto; }
 
 #header { background-color: #555; 	border: 1px solid #444444; border-top: none; box-shadow: 0 0 10px rgba(0,0,0,0.5), 0 1px 3px rgba(255, 255, 255, 0.2) inset; }
-#logo { background: url(../img/logo-icon.png) left center no-repeat; float: left; padding: 10px 10px 10px 36px; }
+#logo { background: url(../img/logo-icon.png) left center no-repeat; float: left; padding: 15px 10px 10px 36px; }
 #logo h1 { font-family: 'Nobile', arial, serif; font-size: 20px; text-shadow: 2px 2px 2px #000; }
 	#logo h1 a { color: #eee; text-decoration: none; display: block;}
 
 #auth { float: right; }
 #auth ul { list-style: none; float: right;}
 	#auth li { float: left; padding: 10px 10px 10px 0; }
-		#auth li a { text-decoration: none; }
+	#auth li.header-link { margin-top: 5px; }
+		#auth li a { text-decoration: none; color: white; }
 
 #main { background-color: white; padding: 10px 10px 40px 10px; -moz-box-shadow: 1px 2px 2px #888; -webkit-box-shadow: 1px 2px 2px #888; box-shadow: 1px 1px 2px #888; }
 
