--- a/app/webroot/css/main.css
+++ b/app/webroot/css/main.css
@@ -1,112 +1,12 @@
-* { padding: 0; margin: 0 }
-body { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; background-color: #EFEBE3; font-size: 16px; }
-a, a:visited { text-decoration: none; color: #2981e4; }
-a:hover { color: #2575cf;}
-a img { border: none; }
-p {margin-bottom: 10px; }
-ul.legal li {margin-left: 20px; }
-
 .beta { background: url(../img/beta_ribbon.png) no-repeat left top; position: absolute; left: 0; top: 0; width: 78px; height: 75px; z-index: 2; }
 
-.container { width: 960px; margin: 0 auto; }
-
-#header { background-color: #555; 	border: 1px solid #444444; border-top: none; box-shadow: 0 0 10px rgba(0,0,0,0.5), 0 1px 3px rgba(255, 255, 255, 0.2) inset; }
-#logo { background: url(../img/logo-icon.png) left center no-repeat; float: left; padding: 10px 10px 10px 36px; }
-#logo h1 { font-family: 'Nobile', arial, serif; font-size: 20px; text-shadow: 2px 2px 2px #000; }
-	#logo h1 a { color: #eee; text-decoration: none; display: block;}
-
-#auth { float: right; }
-#auth ul { list-style: none; float: right;}
-	#auth li { float: left; padding: 10px 10px 10px 0; }
-		#auth li a { text-decoration: none; }
-
-#main { background-color: white; padding: 10px 10px 40px 10px; -moz-box-shadow: 1px 2px 2px #888; -webkit-box-shadow: 1px 2px 2px #888; box-shadow: 1px 1px 2px #888; }
-
-#navigation ul { list-style: none; }
-	#navigation li { float: left; padding: 10px;}
-		#navigation li.first {padding: 10px 10px 10px 0; }
-
-#content .content-title { margin-bottom: 10px; }
-
-#footer { padding: 10px; margin-top: 10px; font-size: 12px; float: right;}
-.social { float: left; padding: 10px; }
-
-.button, .button:visited {
-	background: #222 repeat-x;
-	display: inline-block;
-	padding: 5px 10px 6px;
-	color: #fff;
-	text-decoration: none;
-	-moz-border-radius: 6px;
-	-webkit-border-radius: 6px;
-	-moz-box-shadow: 0 1px 3px rgba(0,0,0,0.6);
-	-webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.6);
-	text-shadow: 0 -1px 1px rgba(0,0,0,0.25);
-	border-bottom: 1px solid rgba(0,0,0,0.25);
-	position: relative;
-	cursor: pointer
+.hero {
+	color: white;
+	padding: 130px 0 50px 0;
+	margin-top: -90px;
+	margin-bottom: 30px;
+	background-color: #3A3A44;
 }
-
-.ui-notification { font-size: 12px; }
-#UserPassword { width: 250px; }
-input.button { border: 0; }
-
-.button:hover							{ background-color: #111; color: #fff; }
-.button:active							{ top: 1px; }
-.small.button, .small.button:visited 			{ font-size: 11px}
-.button, .button:visited,
-.medium.button, .medium.button:visited 		{ font-size: 13px;
-										  font-weight: bold;
-										  line-height: 1;
-										  text-shadow: 0 -1px 1px rgba(0,0,0,0.25);
-										  }
-
-.large.button, .large.button:visited 			{ font-size: 14px;
-											  padding: 8px 14px 9px; }
-
-.super.button, .super.button:visited 			{ font-size: 34px;
-											  padding: 8px 14px 9px; }
-
-.pink.button, .magenta.button:visited		{ background-color: #e22092; }
-.pink.button:hover							{ background-color: #c81e82; }
-.green.button, .green.button:visited		{ background-color: #91bd09; }
-.green.button:hover						    { background-color: #749a02; }
-.red.button, .red.button:visited			{ background-color: #e62727; }
-.red.button:hover							{ background-color: #cf2525; }
-.orange.button, .orange.button:visited		{ background-color: #ff5c00; }
-.orange.button:hover						{ background-color: #d45500; }
-.blue.button, .blue.button:visited		    { background-color: #2981e4; }
-.blue.button:hover							{ background-color: #2575cf; }
-.yellow.button, .yellow.button:visited		{ background-color: #ffb515; }
-.yellow.button:hover						{ background-color: #fc9200; }
-
-form input, form select, form textarea {
-	background-color: #eaeaea;
-	background: -moz-linear-gradient(top, #ffffff, #eaeaea);
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0.0, #ffffff), color-stop(1.0, #eaeaea));
-	border: 1px solid #cacaca;
-	color: #444;
-	padding: 3px 5px;
+.footer {
+	padding: 20px 0;
 }
-form select { width: 138px;}
-form label {
-	margin-top: 10px;
-	font-size: 12px;
-	display: block;
-}
-form textarea {
-	width: 400px;
-	height: 150px;
-}
-form .checkbox { float: left; margin-right: 5px; }
-
-.tipsy { padding: 5px; font-size: 10px; opacity: 0.8; filter: alpha(opacity=80); background-repeat: no-repeat;  background-image: url(../img/tipsy.gif); }
-  .tipsy-inner { padding: 5px 8px 4px 8px; background-color: black; color: white; max-width: 200px; text-align: center; }
-  .tipsy-inner { -moz-border-radius:3px; -webkit-border-radius:3px; }
-  .tipsy-north { background-position: top center; }
-  .tipsy-south { background-position: bottom center; }
-  .tipsy-east { background-position: right center; }
-  .tipsy-west { background-position: left center; }
-
-#language {float: right; padding-right: 10px; margin-top: 3px; display: inline; padding-top: 12px; }
-
