Added affix ability to submenu.

--- a/app/webroot/css/app.css
+++ b/app/webroot/css/app.css
@@ -25,3 +25,12 @@ body { margin-top: 90px; margin-bottom: 90px;}
 .spacer {
 	margin-bottom: 20px;
 }
+
+.submenu {
+	z-index: 10;
+}
+
+.affix .affix-hidden {
+	display: none;
+}
+
